kubernettes/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: kub-app
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: nginx:latest
      ports:
        - containerPort: 8000
      volumeMounts:
        - mountPath: /app/logs
          name: logs-volume
  volumes:
    - name: logs-volume
      emptyDir: {}
