kubernettes/deplyoment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hse-deployment
  namespace: hse
spec:
  replicas: 3
  selector: # подбирает поды
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: hse-pod
        image: nginx-latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
