kubernettes/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: kub-app
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: nginx:latest
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /app/logs
          name: logs-volume
  volumes:
    - name: logs-volume
      emptyDir: {}
