kubernettes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hse-pod
  labels:
    app: frontend
  namespace: hse
spec:
  containers:
  - name: frontend
      # Название образа - образ должен быть залит в registry
    image: nginx:latest
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
