kubernettes/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: kub-app
  labels:
    app: postgres
spec:
  containers:
    - name: postgres
      image: postgres:13
      ports:
        - containerPort: 5432
      volumeMounts:
        - mountPath: /app/logs
          name: logs-volume
  volumes:
    - name: logs-volume
      emptyDir: {}
