kubernettes/service-kub.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: kub-app
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80 # порт адрес сервиса
      targetPort: 80 # порт адрес пода
