kubernettes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: kub-app
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
