kubernettes/ingress_example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hse
  name: hse-ingress
  labels:
    name: hse-ingress
spec:
  rules: ai-hse.ru
  http:
    paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hse-service # название сервиса
            port:
              number: 80 # порт сервиса
